mdapioutput/objects/StoreProduct__c.object
<CustomObject>
    <fields>
        <fullName>ActualQuantity__c</fullName>
        <label>Actual Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExpirationDate__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LotId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lot</label>
        <referenceTo>Lot__c</referenceTo>
        <relationshipLabel>Store Products</relationshipLabel>
        <relationshipName>StoreProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LotNumber__c</fullName>
        <formula>LotId__r.LotNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lot Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Shipment</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PharmaProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pharma Product</label>
        <referenceTo>CTPHARMA__Product__c</referenceTo>
        <relationshipLabel>Store Products</relationshipLabel>
        <relationshipName>StoreProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>System Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StoreId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Store</label>
        <referenceTo>Store__c</referenceTo>
        <relationshipLabel>Store Products</relationshipLabel>
        <relationshipName>StoreProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StoreProduct__c</fullName>
        <formula>PharmaProductId__r.Name +&apos; | &apos;+  StoreId__r.Name + &apos; | &apos; + &apos;Lot#&apos;+&apos; &apos;+ LotId__r.LotNumber__c +&apos; | &apos;+  Text(DAY(ExpirationDate__c)) +&apos;-&apos;+ text(MONTH(ExpirationDate__c))+&apos;-&apos;+text(YEAR(ExpirationDate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Store Product</label>
        <type>Text</type>
    </fields>
    <label>Store Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>StoreProduct__c</columns>
        <columns>NAME</columns>
        <columns>StoreId__c</columns>
        <columns>LotId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>STPR-{0000000}</displayFormat>
        <label>Store Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Store Products</pluralLabel>
    <recordTypes>
        <fullName>Mobile_Store_Product</fullName>
        <active>false</active>
        <label>Mobile Store Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>Store_Product</fullName>
        <active>true</active>
        <label>Store Product</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>